--- a/bridgelabs.addressbooksystem/pom.xml
+++ b/bridgelabs.addressbooksystem/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
