--- a/bridgelabs.addressbooksystem/pom.xml
+++ b/bridgelabs.addressbooksystem/pom.xml
@@ -56,6 +56,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.22</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.3.1</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
